; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_image.c_R_InitSkins.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_image.c_R_InitSkins.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, %struct.TYPE_6__** }
%struct.TYPE_6__ = type { i32, i32, %struct.TYPE_6__*, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_6__* (i32, i32)* }

@tr = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@ri = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@h_low = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"<default skin>\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @R_InitSkins() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @tr, i32 0, i32 0), align 8
  %2 = load %struct.TYPE_6__* (i32, i32)*, %struct.TYPE_6__* (i32, i32)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ri, i32 0, i32 0), align 8
  %3 = load i32, i32* @h_low, align 4
  %4 = call %struct.TYPE_6__* %2(i32 24, i32 %3)
  %5 = load %struct.TYPE_6__**, %struct.TYPE_6__*** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @tr, i32 0, i32 2), align 8
  %6 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %5, i64 0
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %6, align 8
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %1, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @Q_strncpyz(i32 %9, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 4)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  %13 = load %struct.TYPE_6__* (i32, i32)*, %struct.TYPE_6__* (i32, i32)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ri, i32 0, i32 0), align 8
  %14 = load i32, i32* @h_low, align 4
  %15 = call %struct.TYPE_6__* %13(i32 4, i32 %14)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 2
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %17, align 8
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @tr, i32 0, i32 1), align 4
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 2
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i64 0
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  store i32 %18, i32* %23, align 4
  ret void
}

declare dso_local i32 @Q_strncpyz(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
